--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -1,9 +1,10 @@
 #
 # Radioactive extra stuff
 #
-CONFIG_LOCALVERSION="~Radioactive_V1.0.4"
+CONFIG_LOCALVERSION="~Radioactive_V1.0.6"
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_SUSPEND_SKIP_SYNC=y
 
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
