--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -4,6 +4,8 @@
 CONFIG_LOCALVERSION="-Radioactive_V2.0.0"
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_SUSPEND_SKIP_SYNC=y
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
 
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
