--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -7,6 +7,7 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_POWERSUSPEND=y
 # CONFIG_POWERSUSPEND_DEBUG is not set
 CONFIG_SUSPEND_SKIP_SYNC=y
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
 
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
