--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -8,6 +8,10 @@ CONFIG_POWERSUSPEND=y
 # CONFIG_POWERSUSPEND_DEBUG is not set
 CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
+CONFIG_UCI=y
+CONFIG_UCI_NOTIFICATIONS=y
+CONFIG_UCI_NOTIFICATIONS_SCREEN_CALLBACKS=y
+
 
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
