arm64/dts: raviole: MDIS tables for PD/PPS
Initial round of PD and PPS tables on 8 levels using the measured
or predicted dissipation. Tables for WLC are an educated guess.

Bug: 227516821
Signed-off-by: AleX Pelosi <apelosi@google.com>
Change-Id: I43306d5ffb2b0205281ab7a23501ffd1df84cfeb

--- a/arch/arm64/boot/dts/google/gs101-raviole-charging.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-raviole-charging.dtsi
@@ -71,6 +71,10 @@
 			google_wlc_fcc_charger: google,wlc_fcc_charger {
 				#cooling-cells = <2>;
 			};
+
+			google_mdis_charger: google,mdis_charger {
+				#cooling-cells = <2>;
+			};
 		};
 	};
 };
