arm64/dts: gs101: Enable chg-termination-5v
Bug: 226070644
Bug: 231644892
Signed-off-by: Kyle Tso <kyletso@google.com>
Change-Id: I280b31686016e4858957cbf24ae7480b058d1065
Signed-off-by: celtare21 <celtare21@gmail.com>

--- a/arch/arm64/boot/dts/google/gs101-raviole-charging.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-raviole-charging.dtsi
@@ -38,6 +38,7 @@
 				google,chg-power-supply = "gcpm";
 				google,bat-power-supply = "battery";
 				google,usb-power-supply = "usb";
+				google,tcpm-power-supply = <&max77759tcpc>;
 
 				google,fv-max-uv = <4450000>;
 
@@ -58,6 +59,8 @@
 				/* Enable TEMP-DEFEND */
 				google,bd-temp-enable;
 				google,bd-temp-dry-run;
+
+				google,chg-termination-5v;
 			};
 
 			google_bms {
