--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -1,7 +1,7 @@
 #
 # Radioactive extra stuff
 #
-CONFIG_LOCALVERSION="~Radioactive_V1.1.0"
+CONFIG_LOCALVERSION="~Radioactive_V1.1.4"
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_SUSPEND_SKIP_SYNC=y
@@ -9,6 +9,9 @@ CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
 CONFIG_UCI=y
 CONFIG_UCI_NOTIFICATIONS=y
 CONFIG_UCI_NOTIFICATIONS_SCREEN_CALLBACKS=y
+CONFIG_ANON_VMA_NAME=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
 
 
 CONFIG_AUDIT=y
