arm64/dts: gs101: thermal: set dfs throttled cpus for big/mid cores
when temperature crosses thermal dfs threshold, hw throttles down both
big/mid cores. Set dfs throttled cpus for big/mid cores and set max
dfs count for each cpu domain.

Bug: 222363270
Test: Build and boot on device.
Signed-off-by: Sayanna Chandula <sayanna@google.com>
Change-Id: Ib38e0b91cdd7d3d76cd52218840fa290abd3d272

--- a/arch/arm64/boot/dts/google/gs101-cpu.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-cpu.dtsi
@@ -497,6 +497,7 @@
 			#cooling-cells = <2>; /* min followed by max */
 			ect-coeff-index = <2>;
 			tz-cooling-name = "LITTLE";
+			max-dfs-count = <0>;
 			skip-boot-pmqos;
 			use-em-coeff;
 
@@ -517,6 +518,7 @@
 			#cooling-cells = <2>; /* min followed by max */
 			ect-coeff-index = <1>;
 			tz-cooling-name = "MID";
+			max-dfs-count = <2>;
 			skip-boot-pmqos;
 			use-em-coeff;
 
@@ -537,6 +539,7 @@
 			#cooling-cells = <2>; /* min followed by max */
 			ect-coeff-index = <0>;
 			tz-cooling-name = "BIG";
+			max-dfs-count = <2>;
 			skip-boot-pmqos;
 			use-em-coeff;
 
