--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -1,7 +1,7 @@
 #
 # Radioactive extra stuff
 #
-CONFIG_LOCALVERSION="~Radioactive_V1.1.4"
+CONFIG_LOCALVERSION="~Radioactive_V1.1.5"
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_SUSPEND_SKIP_SYNC=y
@@ -135,9 +135,9 @@ CONFIG_CMA_DEBUGFS=y
 CONFIG_CMA_SYSFS=y
 CONFIG_CMA_AREAS=16
 CONFIG_READ_ONLY_THP_FOR_FS=y
-CONFIG_DAMON=y
-CONFIG_DAMON_PADDR=y
-CONFIG_DAMON_RECLAIM=y
+# CONFIG_DAMON is not set
+# CONFIG_DAMON_PADDR is not set
+# CONFIG_DAMON_RECLAIM is not set
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
