drivers: soc: google: pixel-em: build into zImage
Signed-off-by: acuicultor <ramoncuenca4@gmail.com>

--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -13,6 +13,7 @@ CONFIG_ANON_VMA_NAME=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 # CONFIG_LRU_GEN_STATS is not set
+CONFIG_PIXEL_EM=y
 
 
 CONFIG_AUDIT=y
