--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -1,3 +1,10 @@
+#
+# Radioactive extra stuff
+#
+CONFIG_LOCALVERSION="-Radioactive_V2.0.0"
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
