--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -726,6 +726,7 @@ CONFIG_PID_IN_CONTEXTIDR=y
 
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BBR2=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_CUBIC=y
@@ -742,5 +743,5 @@ CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_TCP_CONG_AGILESD=y
-CONFIG_DEFAULT_BBR=y
-CONFIG_DEFAULT_TCP_CONG="bbr"
+CONFIG_DEFAULT_BBR2=y
+CONFIG_DEFAULT_TCP_CONG="bbr2"
